[package]
name = "trade-log-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.3", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "postgres",
    "grpc",
] }
trade-log = {git = "https://github.com/MyJetTools/trade-log", tag = "0.1.0"}
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = {version = "*", features = ["derive"]}
tokio = "*"
prost = "*"
prost-types = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] }