[package]
name = "trade-log-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "postgres",
    "grpc",
] }
trade-log = { git = "https://github.com/MyJetTools/trade-log", tag = "0.1.7" }

serde = { version = "*", features = ["derive"] }
tokio = "*"
prost = "*"
prost-types = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
